# docs-rag

./: .gitignore  README.md  benchmark.ipynb  chat_app.py  chat_app_v1.py  config.json  docs_loader_app.py  embedding_models.json  openai_models.json  pyproject.toml  rag_supervisely.ipynb  requirements.txt  settings.py  test_rag.ipynb  todo
docker/: Dockerfile
docsrag/: chain.py  chromadb.py  docs_loader.py
docsrag/app/: chat_app.py  chat_app_v1.py  utils.py
docsrag/rag/: chain.py  chromadb.py  docs_reader.py
src/: chain.py  chromadb.py  docs_reader.py
